# eduagent

./: .env.example  .gitignore  .mcp.json  .mcp.template.json  CLAUDE.md  STATUS.md  pyproject.toml  requirements.txt  run_search.sh  test_setup.py
.claude/: settings.json
data/: test_inputs.json
diagrams/: agent_flow.html  architecture.html  capability_lifecycle.html  report.html
eduagent_core/: capability_registry.py  llm_planner.py  planner.py  reviewer.py  workflow_runner.py
eduagent_exam/: __init__.py  service.py
eduagent_lesson_plan/: __init__.py  faiss_toolkit.py  service.py
eduagent_ppt/: __init__.py  service.py
results/: result_20260305_183602.md  result_20260305_194730.md
scripts/: check_results.py  exam_mcp.py  execute_workflow.py  framework_research.py  generate_workflow.py  lesson_plan_mcp.py  list_dir.sh  list_results.py  ppt_mcp.py  run_agent.py  run_capability.py  run_exam.py  run_explore.py  run_lesson_plan.py  run_planner.py  run_ppt.py  search_edu.py  task_state.py
tests/: __init__.py  conftest.py  test_api.py  test_capability_registry.py  test_e2e.py  test_evaluation.py  test_exam_service.py  test_lesson_plan_service.py  test_models.py  test_planner.py  test_ppt_service.py  test_registry.py  test_reviewer.py  test_runtime.py
ui/: index.html
workflows/: workflow_20260305_201945.json  workflow_20260305_201945.md  workflow_20260305_203652.json  workflow_20260305_203652.md  workflow_20260305_204950.json  workflow_20260305_204950.md  workflow_20260305_211418.json  workflow_20260305_211418.md  workflow_20260305_212521.json  (+1 more)
(+90 files in other folders)
