[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduagent"
version = "0.1.0"
description = "Multi-agent educational capability creation system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sse-starlette>=1.6",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.20",
]

[project.scripts]
eduagent = "eduagent.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
